Improve minifig import rate limit handling
