# backend/set-service/docs/swagger.json
@@ -46,7 +46,7 @@
         },
         "/api/import/minifigs": {
             "post": {
-                "description": "Загружает все минифигурки и отправляет в data-service",
+                "description": "Загружает минифигурки частями и отправляет в data-service",
                 "consumes": [
                     "application/json"
                 ],
@@ -56,7 +56,30 @@
                 "tags": [
                     "import"
                 ],
-                "summary": "Импорт всех минифигурок из Rebrickable",
+                "summary": "Импорт минифигурок из Rebrickable",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Страница начала",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Количество страниц (0 - все)",
+                        "name": "pages",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1000,
+                        "description": "Размер страницы",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
